--- a/HALOO.html
+++ b/HALOO.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Rioni osht gllup</p>
-    <h1>fuck off</h1>
+    <h1>HALOOO</h1>
 </body>
 </html>
